--- a/package.json
+++ b/package.json
@@ -8,28 +8,15 @@
     "github": "https://github.com/coreui",
     "twitter": "https://twitter.com/core_ui"
   },
-  "contributors": [
-    {
-      "name": "CoreUI Team",
-      "url": "https://github.com/orgs/coreui/people"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:coreui/coreui-free-vue-admin-template.git"
-  },
-  "homepage": "http://coreui.io",
-  "copyright": "Copyright 2021 creativeLabs Łukasz Holeczek",
-  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
+    "auto-changelog": "auto-changelog  --hide-credit --commit-limit false --package --backfill-limit 0 --starting-version 3.0.0-beta.0",
     "clearCache": "jest --clearCache",
-    "release": "npm-run-all clearCache lint build test:unit test:e2e",
-    "auto-changelog": "auto-changelog  --hide-credit --commit-limit false --package --backfill-limit 0 --starting-version 3.0.0-beta.0"
+    "release": "npm-run-all clearCache lint build test:unit test:e2e"
   },
   "dependencies": {
     "@coreui/coreui": "^3.4.0",
@@ -39,6 +26,7 @@
     "@coreui/vue-chartjs": "^1.0.6",
     "vue": "~2.6.12",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.4.0",
     "vuex": "~3.6.2"
   },
   "devDependencies": {
@@ -59,15 +47,30 @@
     "npm-run-all": "~4.1.5",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "~2.6.12"
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "~2.6.12",
+    "vuetify-loader": "^1.7.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie < 11"
   ],
+  "contributors": [
+    {
+      "name": "CoreUI Team",
+      "url": "https://github.com/orgs/coreui/people"
+    }
+  ],
+  "copyright": "Copyright 2021 creativeLabs Łukasz Holeczek",
   "engines": {
     "node": ">= 12.x",
     "npm": ">= 6.x"
+  },
+  "homepage": "http://coreui.io",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:coreui/coreui-free-vue-admin-template.git"
   }
 }
